force-app/main/default/objects/leaseworks__Maintenance_Reserve_Terms__c/leaseworks__Maintenance_Reserve_Terms__c.object-meta.xml
<CustomObject>
    <description>Source : Volito</description>
    <label>Z_Unused_2012 MR Terms</label>
    <nameField>
        <label>Z_Unused_2012 Event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_2012 MR Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>