force-app/main/default/objects/leaseworks__Maintenance_Reserve_Terms__c/fields/leaseworks__EOL_Oblig_Rates_In_Contract__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__EOL_Oblig_Rates_In_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>End Of Lease Obligation Rates In Contract</inlineHelpText>
    <label>EoL Obligation Rates In Contract</label>
    <type>Checkbox</type>
</CustomField>