force-app/main/default/objects/leaseworks__Maintenance_Reserve_Terms__c/fields/leaseworks__LLP_Is_Baseline__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LLP_Is_Baseline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LLP Is Baseline</label>
    <type>Checkbox</type>
</CustomField>