force-app/main/default/objects/leaseworks__Maintenance_Reserve_Terms__c/fields/leaseworks__Refund_At_Event__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Refund_At_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refund At Event</label>
    <type>Checkbox</type>
</CustomField>