force-app/main/default/objects/leaseworks__Maintenance_Reserve_Terms__c/fields/leaseworks__Unit_Of_Measurement_PL__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Unit_Of_Measurement_PL__c</fullName>
    <label>Unit Of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FH</fullName>
            </value>
            <value>
                <fullName>FC</fullName>
            </value>
            <value>
                <fullName>APU Hrs</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>